[project]
name = "mcp-server-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.12.5",
    "groq>=0.32.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "trafilatura>=2.0.0",
]
